[gd_scene load_steps=33 format=3 uid="uid://c03yraqhitmc3"]

[ext_resource type="Script" uid="uid://b3ufvuy7uxy0t" path="res://OrienteeringScripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://2ipstwsx5qy4" path="res://Sprites/Character/1/1.png" id="2_tx1dd"]
[ext_resource type="Texture2D" uid="uid://djecqal754ft7" path="res://Sprites/Character/2/1.png" id="2_ukyrk"]
[ext_resource type="Script" uid="uid://db5mov8whv7uw" path="res://OrienteeringScripts/camera_shake.gd" id="3_x3wgy"]
[ext_resource type="Script" uid="uid://ceiytplh5orxt" path="res://OrienteeringScripts/player_ui.gd" id="4_fkybt"]
[ext_resource type="Texture2D" uid="uid://nekhiab68v2l" path="res://Sprites/Character/1/4.png" id="4_gymyn"]
[ext_resource type="Texture2D" uid="uid://dsbxxum4ekkwk" path="res://OrienteeringSprites/Objects/tile_0044.png" id="4_vgqql"]
[ext_resource type="Texture2D" uid="uid://dxx5c6vqgt3j5" path="res://Sprites/Character/2/4.png" id="5_7dp3o"]
[ext_resource type="Texture2D" uid="uid://c00qaillmf3ol" path="res://Sprites/Character/1/2.png" id="5_gymyn"]
[ext_resource type="Texture2D" uid="uid://out5kkvbsc01" path="res://Sprites/Character/2/2.png" id="6_h4iuc"]
[ext_resource type="Texture2D" uid="uid://ujbwi5pgk0x6" path="res://Sprites/Character/1/3.png" id="6_pu2lt"]
[ext_resource type="Texture2D" uid="uid://p4xsvge586yu" path="res://OrienteeringSprites/UI/shaded-dark/shadedDark24.png" id="7_8erm5"]
[ext_resource type="Texture2D" uid="uid://cu784c13p6hx3" path="res://Sprites/Character/2/3.png" id="7_fd4e3"]
[ext_resource type="Texture2D" uid="uid://bmk537ajmt067" path="res://OrienteeringSprites/UI/shaded-dark/shadedDark14.png" id="8_f1ek2"]
[ext_resource type="Texture2D" uid="uid://b4yklfy6toc3c" path="res://OrienteeringSprites/UI/shaded-dark/shadedDark16.png" id="9_f1ek2"]
[ext_resource type="FontFile" uid="uid://bppeqy8tyqio7" path="res://Fonts/SourceHanSansCN-VF.otf" id="13_wf7f2"]
[ext_resource type="FontFile" uid="uid://c61jh50ymuf6u" path="res://Fonts/FangZhengFangSong-GBK-1.ttf" id="17_24ol0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v0iea"]
height = 26.0

[sub_resource type="Animation" id="Animation_6t5aa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_tx1dd")]
}

[sub_resource type="Animation" id="Animation_cvnsp"]
resource_name = "idle"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_tx1dd")]
}

[sub_resource type="Animation" id="Animation_vgqql"]
resource_name = "jump"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_gymyn")]
}

[sub_resource type="Animation" id="Animation_fkybt"]
resource_name = "move"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("5_gymyn"), ExtResource("2_tx1dd"), ExtResource("6_pu2lt"), ExtResource("2_tx1dd"), ExtResource("5_gymyn")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vgqql"]
_data = {
&"RESET": SubResource("Animation_6t5aa"),
&"idle": SubResource("Animation_cvnsp"),
&"jump": SubResource("Animation_vgqql"),
&"move": SubResource("Animation_fkybt")
}

[sub_resource type="Animation" id="Animation_igrcy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ukyrk")]
}

[sub_resource type="Animation" id="Animation_l6n3p"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ukyrk")]
}

[sub_resource type="Animation" id="Animation_fs7ks"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_7dp3o")]
}

[sub_resource type="Animation" id="Animation_qqcod"]
resource_name = "move"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_ukyrk"), ExtResource("6_h4iuc"), ExtResource("7_fd4e3"), ExtResource("6_h4iuc"), ExtResource("2_ukyrk")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_olqyp"]
_data = {
&"RESET": SubResource("Animation_igrcy"),
&"idle": SubResource("Animation_l6n3p"),
&"jump": SubResource("Animation_fs7ks"),
&"move": SubResource("Animation_qqcod")
}

[sub_resource type="LabelSettings" id="LabelSettings_fkybt"]
font_size = 64
font_color = Color(0.95, 0.936542, 0.1425, 1)
outline_size = 3
outline_color = Color(0.01, 0.01, 0.01, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 0.494118)

[sub_resource type="LabelSettings" id="LabelSettings_x3wgy"]
font_size = 48
font_color = Color(0.02, 0.02, 0.02, 1)
outline_size = 2
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.490196)

[sub_resource type="LabelSettings" id="LabelSettings_3smsa"]
font = ExtResource("13_wf7f2")
font_size = 100
outline_size = 2
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.54902)

[sub_resource type="LabelSettings" id="LabelSettings_kkwtv"]
font = ExtResource("17_24ol0")
font_size = 58
font_color = Color(0.79, 0.93, 1, 1)
outline_size = 2
outline_color = Color(0.8765, 0.81, 1, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.541176)
shadow_offset = Vector2(2, 2)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_cvnsp")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(-18.75, -18.75)
scale = Vector2(0.0411667, 0.04186)
texture = ExtResource("2_ukyrk")
centered = false
offset = Vector2(0, -272)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_v0iea")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -60)
zoom = Vector2(4, 4)
script = ExtResource("3_x3wgy")

[node name="AnimationPlayer1" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vgqql")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_olqyp")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("4_fkybt")

[node name="HeartContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 80.0

[node name="Heart" type="TextureRect" parent="CanvasLayer/HeartContainer"]
layout_mode = 2
texture = ExtResource("4_vgqql")
expand_mode = 2

[node name="Heart2" type="TextureRect" parent="CanvasLayer/HeartContainer"]
layout_mode = 2
texture = ExtResource("4_vgqql")
expand_mode = 2

[node name="Heart3" type="TextureRect" parent="CanvasLayer/HeartContainer"]
layout_mode = 2
texture = ExtResource("4_vgqql")
expand_mode = 2

[node name="Heart4" type="TextureRect" parent="CanvasLayer/HeartContainer"]
layout_mode = 2
texture = ExtResource("4_vgqql")
expand_mode = 2

[node name="Heart5" type="TextureRect" parent="CanvasLayer/HeartContainer"]
layout_mode = 2
texture = ExtResource("4_vgqql")
expand_mode = 2

[node name="Heart6" type="TextureRect" parent="CanvasLayer/HeartContainer"]
layout_mode = 2
texture = ExtResource("4_vgqql")
expand_mode = 2

[node name="Heart7" type="TextureRect" parent="CanvasLayer/HeartContainer"]
layout_mode = 2
texture = ExtResource("4_vgqql")
expand_mode = 2

[node name="Haze" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180005, 0.180005, 0.180005, 0.45098)

[node name="CoinText" type="Label" parent="CanvasLayer"]
offset_left = 26.0
offset_top = 77.0
offset_right = 220.0
offset_bottom = 144.0
text = "Coins : 0"
label_settings = SubResource("LabelSettings_fkybt")

[node name="HeartsNum" type="Label" parent="CanvasLayer"]
offset_left = 92.0
offset_top = 5.0
offset_right = 159.0
offset_bottom = 72.0
text = "×  0"
label_settings = SubResource("LabelSettings_x3wgy")

[node name="Level" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = -44.0
offset_right = 107.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "定向越野小游戏"
label_settings = SubResource("LabelSettings_3smsa")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="Button" parent="CanvasLayer"]
process_mode = 3
z_index = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_bottom = 80.0
grow_horizontal = 0
icon = ExtResource("7_8erm5")
flat = true

[node name="StopButton" type="Button" parent="CanvasLayer"]
process_mode = 3
z_index = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -176.0
offset_right = -88.0
offset_bottom = 88.0
grow_horizontal = 0
icon = ExtResource("8_f1ek2")
flat = true
expand_icon = true

[node name="StartButton" type="Button" parent="CanvasLayer"]
process_mode = 3
visible = false
z_index = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -176.0
offset_right = -88.0
offset_bottom = 88.0
grow_horizontal = 0
icon = ExtResource("9_f1ek2")
flat = true
expand_icon = true

[node name="ControlOrder" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 177.0
offset_top = 20.0
offset_right = 276.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
text = "开始！"
label_settings = SubResource("LabelSettings_kkwtv")
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/QuitButton" to="CanvasLayer" method="_on_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/StopButton" to="CanvasLayer" method="_on_stop_button_pressed"]
[connection signal="pressed" from="CanvasLayer/StartButton" to="CanvasLayer" method="_on_start_button_pressed"]
